Fix T39785: Video Sequencer, Aspect Ratio issue

Sequencer preview was rendering all scenes with the context
resolution, which doesn't give proper result. Now made it so
sequencer scene preview uses scene's resolution.